--- a/APP/templates/certificados_list.html
+++ b/APP/templates/certificados_list.html
@@ -9,7 +9,7 @@
         {% for certificado in certificados %}
             <div class="certifi">
                 <h2>{{ certificado.titulo }}</h2>
-                <img src="{{ certificado.img.url }}" alt="{{ certificado.titulo }}" width="600">
+               <img src="{% static 'img/Certificados/{{ certificado.img.name }}' %}" alt="{{ certificado.titulo }}" width="600">
             </div>
         {% endfor %}
         </div>
