--- a/APP/templates/certificados_list.html
+++ b/APP/templates/certificados_list.html
@@ -3,6 +3,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% load static %}
 <div  >
     <h1 style="text-align: center;">Certificaciones</h1>
     <div class="repo-container">
